--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <p><a class="nav-link active" href="/AshZvonham/docs/index.html">Home</a></p>
+                            <p><a class="nav-link active" href="/AshZvonham/index.html">Home</a></p>
                         </li>  
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/docs/contact.html">Contact</a></p>
+                            <p><a class="nav-link" href="/AshZvonham/contact.html">Contact</a></p>
                         </li>
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/docs/schedule.html">Schedules</a></p>
+                            <p><a class="nav-link" href="/AshZvonham/schedule.html">Schedules</a></p>
                         </li>
                     </ul>
 
@@ -46,10 +46,10 @@
                 <div class=" col-sm-8">
                     <h1 class="title">Title here</h1>
                     <p class="lead">here's some more text or something</p>
-                    <p><a class="btn btn-info btn-large" target="_blank" href="/AshZvonham/docs/contact.html">Book an appointment today!</a></p>
+                    <p><a class="btn btn-info btn-large" target="_blank" href="/AshZvonham/contact.html">Book an appointment today!</a></p>
                 </div>
                 <div class="col-sm">
-                    <img class="headshot" src="images/headshot_square.png" alt="Headshot of Ash Zvonham" />
+                    <img class="headshot" src="./images/headshot_square.png" alt="Headshot of Ash Zvonham" />
                 </div>
                 
             </div>
@@ -58,7 +58,7 @@
                 <div class="col-lg-12">
                     <div class="testimonial-card p-4 p-md-5">
                         <div class="text-center mb-4">
-                            <img class="avatar mb-3" src="images/blank-profile-picture-973460_960_720.webp" />
+                            <img class="avatar mb-3" src="./images/blank-profile-picture-973460_960_720.webp" />
                             <h5 class="mb-1 lead">Name</h5>
                             <p class="text-muted mb-0">title</p>
                         </div>
@@ -68,7 +68,7 @@
 
                     <div class="testimonial-card p-4 p-md-5">
                         <div class="text-center mb-4">
-                            <img class="avatar mb-3" src="images/blank-profile-picture-973460_960_720.webp" />
+                            <img class="avatar mb-3" src="./images/blank-profile-picture-973460_960_720.webp" />
                             <h5 class="mb-1 lead">Name</h5>
                             <p class="text-muted mb-0">title</p>
                         </div>
@@ -78,7 +78,7 @@
 
                     <div class="testimonial-card p-4 p-md-5">
                         <div class="text-center mb-4">
-                            <img class="avatar mb-3" src="images/blank-profile-picture-973460_960_720.webp" />
+                            <img class="avatar mb-3" src="./images/blank-profile-picture-973460_960_720.webp" />
                             <h5 class="mb-1 lead">Name</h5>
                             <p class="text-muted mb-0">title</p>
                         </div>
@@ -98,9 +98,9 @@
                 <div class="col-md-4 mb-3">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="/AshZvonham/docs/index.html" class="text-decoration-none text-white">Home</a></li>
-                        <li><a href="/AshZvonham/docs/contact.html" class="text-decoration-none text-white">Contact</a></li>
-                        <li><a href="/AshZvonham/docs/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
+                        <li><a href="/AshZvonham/index.html" class="text-decoration-none text-white">Home</a></li>
+                        <li><a href="/AshZvonham/contact.html" class="text-decoration-none text-white">Contact</a></li>
+                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
                     </ul>
                 </div>
             </div>
