--- a/schedule.html
+++ b/schedule.html
@@ -19,7 +19,7 @@
         <div class="bg-dark">
             <div class="parallax">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <p><a class="navbar-brand" href="/AshZvonham/docs/index.html">Ash Zvonham</a></p>
+                <p><a class="navbar-brand" href="/AshZvonham/index.html">Ash Zvonham</a></p>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/docs/index.html">Home</a></p>
+                            <p><a class="nav-link" href="/AshZvonham/index.html">Home</a></p>
                         </li>  
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/docs/contact.html">Contact</a></p>
+                            <p><a class="nav-link" href="/AshZvonham/contact.html">Contact</a></p>
                         </li>
                         <li class="nav-item">
-                            <p><a class="nav-link active" href="/AshZvonham/docs/schedule.html">Schedules</a></p>
+                            <p><a class="nav-link active" href="/AshZvonham/schedule.html">Schedules</a></p>
                         </li>
                     </ul>
 
@@ -47,10 +47,10 @@
                 <div class=" col-sm-8">
                     <h1 class="title">Title here</h1>
                     <p class="lead">here's some more text or something</p>
-                    <p><a class="btn btn-info btn-large" target="_blank" href="/AshZvonham/docs/contact.html">Book an appointment today!</a></p>
+                    <p><a class="btn btn-info btn-large" target="_blank" href="/AshZvonham/contact.html">Book an appointment today!</a></p>
                 </div>
                 <div class="col-sm">
-                    <img class="headshot" src="images/headshot_square.png" alt="Headshot of Ash Zvonham" />
+                    <img class="headshot" src="./images/headshot_square.png" alt="Headshot of Ash Zvonham" />
                 </div>
                 
             </div>
@@ -66,9 +66,9 @@
                 <div class="col-md-4 mb-3">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="/AshZvonham/docs/index.html" class="text-decoration-none text-white">Home</a></li>
-                        <li><a href="/AshZvonham/docs/contact.html" class="text-decoration-none text-white">Contact</a></li>
-                        <li><a href="/AshZvonham/docs/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
+                        <li><a href="/AshZvonham/index.html" class="text-decoration-none text-white">Home</a></li>
+                        <li><a href="/AshZvonham/contact.html" class="text-decoration-none text-white">Contact</a></li>
+                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
                     </ul>
                 </div>
             </div>
