--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <h1>heading</h1>
             <p>paragraph of text</p>
         </div> -->
-        <div class="bg-dark">
+        <div class="bg-dark container py-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <p><a class="navbar-brand" href="/AshZvonham/index.html">Ash Zvonham</a></p>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +53,7 @@
                 </ul>
             </div>
 
+        </div>
         </div>
         
     </body>
