added logo, worked with messing with background images 7/5

--- a/contact.html
+++ b/contact.html
@@ -39,20 +39,22 @@
                 </div>
             </nav>
             <div class="parallax">
-
-            <div class="jumbotron bg-dark">
+                <div class="row">
+            <div class="jumbotron bg-dark col-sm-6">
                 <h1 class="title">Say hello!</h1>
             </div>
-            <div class="jumbotron bg-dark text-center">
+            <div class="jumbotron bg-dark text-center col-sm-6">
                 <h2>At one of many places!</h2>
                 <ul class="list-unstyled">
                     <li class="lead"><p>Email:</p></li>
+                    <p></p>
                     <li class="lead"><p>Phone:</p></li>
-                    <li class="lead"><p>Discord:</p></li>
-                    <li class="lead"><p>Your mom's house:</p></li>
+                    <p></p>
+                    <li class="lead"><p>Discord Server:</p></li>
+                    <p></p>
                 </ul>
             </div>
-
+            </div>
         </div>
         </div>
         
@@ -65,7 +67,7 @@
                     <ul class="list-unstyled">
                         <li><a href="/AshZvonham/index.html" class="text-decoration-none text-white">Home</a></li>
                         <li><a href="/AshZvonham/contact.html" class="text-decoration-none text-white">Contact</a></li>
-                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
+                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Scheduling</a></li>
                     </ul>
                 </div>
             </div>
