--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <h1>heading</h1>
             <p>paragraph of text</p>
         </div> -->
+        
+        <div class="bg-image">
         <div class="bg-dark container py-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <p><a class="navbar-brand" href="/AshZvonham/index.html">Ash Zvonham</a></p>
@@ -32,7 +34,7 @@
                             <p><a class="nav-link" href="/AshZvonham/contact.html">Contact</a></p>
                         </li>
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/schedule.html">Schedules</a></p>
+                            <p><a class="nav-link" href="/AshZvonham/schedule.html">Scheduling</a></p>
                         </li>
                     </ul>
 
@@ -45,8 +47,8 @@
             <div class="jumbotron bg-dark row">
                 <div class=" col-sm-8">
                     <h1 class="title">Title here</h1>
-                    <p class="lead">here's some more text or something</p>
-                    <p><a class="btn btn-info btn-large" target="_blank" href="/AshZvonham/contact.html">Book an appointment today!</a></p>
+                    <p class="lead">```I am the owner of Lingus Cordis Vocal Coaching. I am excited to help you achieve your vocal goals! I started my career looking to teach music in public schools but have since shifted my focus to what I feel is an incredibly important niche: vocal coaching for my fellow trans and non-binary people looking to shape their voices, both musically and conversationally. Creating a comfortable environment for growth and change is my primary concern and is a critical part of my philosophy for all things music and voice; I aim to provide a space where you can explore your voice both physically and expressively while acquiring the tools to continue using your voice healthily in all capacities going forward in your personal and professional life. Additionally, with my background in music performance, education, and audio engineering, I can teach you the basic skills of writing, performing, and recording music, including basic skills on guitar and piano.</p>
+                    <p><a class="btn btn-info btn-large" target="_blank" href="https://ashzvonhamvoicecoaching.as.me/">Book an appointment today!</a></p>
                 </div>
                 <div class="col-sm">
                     <img class="headshot" src="./images/headshot_square.png" alt="Headshot of Ash Zvonham" />
@@ -90,6 +92,7 @@
 
             </div> 
         </div>
+        </div>
     </body>
 
     <footer class="mt-auto">
@@ -100,7 +103,7 @@
                     <ul class="list-unstyled">
                         <li><a href="/AshZvonham/index.html" class="text-decoration-none text-white">Home</a></li>
                         <li><a href="/AshZvonham/contact.html" class="text-decoration-none text-white">Contact</a></li>
-                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
+                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Scheduling</a></li>
                     </ul>
                 </div>
             </div>
