--- a/schedule.html
+++ b/schedule.html
@@ -32,7 +32,7 @@
                             <p><a class="nav-link" href="/AshZvonham/contact.html">Contact</a></p>
                         </li>
                         <li class="nav-item">
-                            <p><a class="nav-link active" href="/AshZvonham/schedule.html">Schedules</a></p>
+                            <p><a class="nav-link active" href="/AshZvonham/schedule.html">Scheduling</a></p>
                         </li>
                     </ul>
 
@@ -46,7 +46,7 @@
                 <div class=" col-sm-8">
                     <h1 class="title">Title here</h1>
                     <p class="lead">here's some more text or something</p>
-                    <p><a class="btn btn-info btn-large" target="_blank" href="/AshZvonham/contact.html">Book an appointment today!</a></p>
+                    <p><a class="btn btn-info btn-large" target="_blank" href="https://ashzvonhamvoicecoaching.as.me/">Book an appointment today!</a></p>
                 </div>
                 <div class="col-sm">
                     <img class="headshot" src="./images/headshot_square.png" alt="Headshot of Ash Zvonham" />
@@ -67,7 +67,7 @@
                     <ul class="list-unstyled">
                         <li><a href="/AshZvonham/index.html" class="text-decoration-none text-white">Home</a></li>
                         <li><a href="/AshZvonham/contact.html" class="text-decoration-none text-white">Contact</a></li>
-                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Schedule</a></li>
+                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Scheduling</a></li>
                     </ul>
                 </div>
             </div>
