--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title class>Ash Zvonham-Contact</title>
+        <link rel="icon" type="image/x-icon" href="./images/Lingus-Cordis-Logo-scaled.jpg">
         <!-- Bootstrap CSS file -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
         <link href="style.css" rel="stylesheet">
