--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Ash Zvonham</title>
+        <link rel="icon" type="image/x-icon" href="./images/Lingus-Cordis-Logo-scaled.jpg">
         <!-- Bootstrap CSS file -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
         <link href="style.css" rel="stylesheet">
@@ -46,7 +47,7 @@
             
             <div class="jumbotron bg-dark row">
                 <div class=" col-sm-8">
-                    <h1 class="title">Title here</h1>
+                    <h1 class="title">Ash Zvonham</h1>
                     <p class="lead">```I am the owner of Lingus Cordis Vocal Coaching. I am excited to help you achieve your vocal goals! I started my career looking to teach music in public schools but have since shifted my focus to what I feel is an incredibly important niche: vocal coaching for my fellow trans and non-binary people looking to shape their voices, both musically and conversationally. Creating a comfortable environment for growth and change is my primary concern and is a critical part of my philosophy for all things music and voice; I aim to provide a space where you can explore your voice both physically and expressively while acquiring the tools to continue using your voice healthily in all capacities going forward in your personal and professional life. Additionally, with my background in music performance, education, and audio engineering, I can teach you the basic skills of writing, performing, and recording music, including basic skills on guitar and piano.</p>
                     <p><a class="btn btn-info btn-large" target="_blank" href="https://ashzvonhamvoicecoaching.as.me/">Book an appointment today!</a></p>
                 </div>
