--- a/schedule.html
+++ b/schedule.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Ash Zvonham-Schedule</title>
+        <link rel="icon" type="image/x-icon" href="./images/Lingus-Cordis-Logo-scaled.jpg">
         <!-- Bootstrap CSS file -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
         <link href="style.css" rel="stylesheet">
@@ -44,7 +45,7 @@
             
             <div class="jumbotron bg-dark row">
                 <div class=" col-sm-8">
-                    <h1 class="title">Title here</h1>
+                    <h1 class="title">What to know before booking:</h1>
                     <p class="lead">here's some more text or something</p>
                     <p><a class="btn btn-info btn-large" target="_blank" href="https://ashzvonhamvoicecoaching.as.me/">Book an appointment today!</a></p>
                 </div>
