added some quotes

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
                             <h5 class="mb-1 lead">Name</h5>
                             <p class="text-muted mb-0">title</p>
                         </div>
-                        <p class="text-center mb-0">Endorsement</p>
+                        <p class="text-center mb-0">"She has been wonderful! She's been very patient and understanding with all of my personal struggles, and I'm very grateful for that!"</p>
                         
                     </div>
 
                     <div class="testimonial-card p-4 p-md-5">
                         <div class="text-center mb-4">
-                            <img class="avatar mb-3" src="./images/blank-profile-picture-973460_960_720.webp" />
-                            <h5 class="mb-1 lead">Name</h5>
+                            <img class="avatar mb-3" src="./images/faeimage.png" />
+                            <h5 class="mb-1 lead">Fae</h5>
                             <p class="text-muted mb-0">title</p>
                         </div>
-                        <p class="text-center mb-0">Endorsement</p>
+                        <p class="text-center mb-0">"Ash's lessons got me to a passing voice in just a few short months. I was able to move to Detroit and live as a woman, and that was incredibly empowering. When I figured out that I was actually gender fluid, I was able to reapply those same lessons in femininity to make my voice exactly how I wanted it at different times. Ash was kind, understanding, and patient. Some of the best money I ever spent." </p>
                         
                     </div>
 
