added cert, changed background matching with text themes

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <h1>heading</h1>
             <p>paragraph of text</p>
         </div> -->
+        <div class="bg-image">
         <div class="bg-dark container py-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <p><a class="navbar-brand" href="/AshZvonham/index.html">Ash Zvonham</a></p>
@@ -47,17 +48,14 @@
             <div class="jumbotron bg-dark text-center col-sm-6">
                 <h2>At one of many places!</h2>
                 <ul class="list-unstyled">
-                    <li class="lead"><p>Email:</p></li>
-                    <p></p>
-                    <li class="lead"><p>Phone:</p></li>
-                    <p></p>
-                    <li class="lead"><p>Discord Server:</p></li>
+                    <li><p class="lead">Email:</p></li>
+                    <p>ash@wildfernswellness.com</p>
+                    <li><p class="lead">Discord Server:</p></li>
                     <p></p>
                 </ul>
             </div>
             </div>
-        </div>
-        </div>
+        
         
     </body>
     <footer class="mt-auto">
