--- a/schedule.html
+++ b/schedule.html
@@ -17,6 +17,7 @@
             <h1>heading</h1>
             <p>paragraph of text</p>
         </div> -->
+        <div class="bg-image">
         <div class="bg-dark container py-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <p><a class="navbar-brand" href="/AshZvonham/index.html">Ash Zvonham</a></p>
@@ -56,8 +57,7 @@
             </div>
             
 
-            </div> 
-        </div>
+            
     </body>
 
     <footer class="mt-auto">
