added ddiscord invite

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                     <li><p class="lead">Email:</p></li>
                     <p>ash@wildfernswellness.com</p>
                     <li><p class="lead">Discord Server:</p></li>
-                    <p><a href="discord.gg/wGCXnc7SUS">discord.gg/wGCXnc7SUS</a></p>
+                    <p><a target="_blank" href="https://discord.gg/wGCXnc7SUS">discord.gg/wGCXnc7SUS</a></p>
                 </ul>
             </div>
             </div>
