--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
         <div class="bg-image">
         <div class="bg-dark container py-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <p><a class="navbar-brand" href="/AshZvonham/index.html">Ash Zvonham</a></p>
+                <p><a class="navbar-brand" href="index.html">Ash Zvonham</a></p>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -28,13 +28,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/index.html">Home</a></p>
+                            <p><a class="nav-link" href="index.html">Home</a></p>
                         </li>  
                         <li class="nav-item">
-                            <p><a class="nav-link" href="/AshZvonham/contact.html">Contact</a></p>
+                            <p><a class="nav-link" href="contact.html">Contact</a></p>
                         </li>
                         <li class="nav-item">
-                            <p><a class="nav-link active" href="/AshZvonham/schedule.html">Scheduling</a></p>
+                            <p><a class="nav-link active" href="schedule.html">Scheduling</a></p>
                         </li>
                     </ul>
 
@@ -74,9 +74,9 @@
                 <div class="col-md-4 mb-3">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="/AshZvonham/index.html" class="text-decoration-none text-white">Home</a></li>
-                        <li><a href="/AshZvonham/contact.html" class="text-decoration-none text-white">Contact</a></li>
-                        <li><a href="/AshZvonham/schedule.html" class="text-decoration-none text-white">Scheduling</a></li>
+                        <li><a href="index.html" class="text-decoration-none text-white">Home</a></li>
+                        <li><a href="contact.html" class="text-decoration-none text-white">Contact</a></li>
+                        <li><a href="schedule.html" class="text-decoration-none text-white">Scheduling</a></li>
                     </ul>
                 </div>
             </div>
