--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title class>Ash Zvonham-Contact</title>
-        <link rel="icon" type="image/x-icon" href="./images/Lingus-Cordis-Logo-scaled.jpg">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <!-- Bootstrap CSS file -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
         <link href="style.css" rel="stylesheet">
@@ -44,6 +47,7 @@
                 <div class="row">
             <div class="jumbotron bg-dark col-sm-6">
                 <h1 class="title">Say hello!</h1>
+                <img src="./images/Lingus-Cordis-Logo-scaled.png" style="width: 100%;">
             </div>
             <div class="jumbotron bg-dark text-center col-sm-6">
                 <h2>At one of many places!</h2>
