--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Ash Zvonham-Schedule</title>
-        <link rel="icon" type="image/x-icon" href="./images/Lingus-Cordis-Logo-scaled.jpg">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <!-- Bootstrap CSS file -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
         <link href="style.css" rel="stylesheet">
@@ -39,6 +42,7 @@
                     </ul>
 
                 </div>
+                
             </nav>
             
             <div class="parallax container-fluid">
