--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class=" col-sm-8">
                         <h1 class="title">Ash Zvonham</h1>
-                        <p class="lead">```I am the owner of Lingus Cordis Vocal Coaching. I am excited to help you achieve your vocal goals!</p>
+                        <p class="lead">I am the owner of Lingus Cordis Vocal Coaching. I am excited to help you achieve your vocal goals!</p>
                         <p><a class="btn btn-info btn-large" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Read more!</a></p>
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body info-card">
