--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                 <h2>At one of many places!</h2>
                 <ul class="list-unstyled">
                     <li><p class="lead">Email:</p></li>
-                    <p>ash@wildfernswellness.com</p>
+                    <p>linguacordisvoice@gmail.com</p>
                     <li><p class="lead">Discord Server:</p></li>
                     <p><a target="_blank" href="https://discord.gg/wGCXnc7SUS">discord.gg/wGCXnc7SUS</a></p>
                 </ul>
